<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tasks for SharePoint O365</string>
    <string name="app_description">Tasks for SharePoint O365</string>
    
    <string name="authenticate_title">Authenticate with O365</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear_token">Clear auth token</string>
    <string name="action_add_new">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_filter_completed">Filter completed tasks</string>
    
    <string name="auth_no_refresh_token">Unable to refresh access token</string>
    
    <string name="splash_loading">Loading…</string>
    <string name="splash_initializing">Preparing tasks list</string>
    <string name="splash_initialization_error">Could not create the tasks list</string>
    <string name="splash_auth_error">Authentication failed</string>
    
    <string name="list_tasks_title">Tasks</string>
    <string name="list_tasks_retrieving_tasks">Retrieving Tasks…</string>
    <string name="list_tasks_error_retrieving_tasks">Unable to retrieve task list</string>
    <string name="list_tasks_no_date">-</string>
    
    <string name="edit_task_title">Edit Task</string>
    <string name="edit_task_title_label">Title</string>
    <string name="edit_task_start_date_label">Start Date</string>
    <string name="edit_task_due_date_label">Due Date</string>
    <string name="edit_task_completed_label">Completed</string>
    <string name="edit_task_working">Working…</string>
    <string name="edit_task_error_retrieving_task">Unable to retrieve task</string>
    <string name="edit_task_error_updating_task">Unable to update task</string>
    <string name="edit_task_validation_title_required">Title is required</string>
    
    <string name="task_li_start_date">Start Date</string>
    <string name="task_li_due_date">Due Date</string>
    
    <string name="label_sign_in">Sign in</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_retry">Retry</string>
    <string name="label_go_back">Go back</string>
    <string name="label_continue">Continue</string>
    <string name="label_delete">Delete</string>
    
    <string name="dialog_error_title">Error</string>
    <string name="dialog_confirm_title">Confirm</string>
    <string name="dialog_session_expired">Session expired</string>
    <string name="dialog_auth_failed_title">Authentication failed</string>
    <string name="dialog_auth_failed_message">You must authenticate to continue</string>
    <string name="dialog_delete_confirm_message">Are you sure you want to delete this task?</string>
    
    <string name="component_date_picker_no_date">None</string>
    
    <string name="placeholder">PLACEHOLDER</string>
    
</resources>
